# Florodoro

./: .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  __main__.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  official.workflow.yml  testing.workflow.yml
florodoro/: __init__.py  history.py  plants.py  utilities.py  widgets.py
