[metadata]
name=florodoro
version=0.7
author=Tomáš Sláma
author_email=tomas@slama.dev
keywords=education pyqt5 plants pomodoro
url=https://github.com/xiaoxiae/Florodoro
description=A pomodoro timer that grows procedurally generated trees and flowers while you\'re studying.
long_description= file: README.md
long_description_content_type=text/markdown
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = florodoro
include_package_data = True
install_requires= 
    pyqt5
    pyqtchart
    plyer
    qtawesome
    PyYAML
    DateTime

python_requires= >=3.7.1

[options.package_data]
florodoro =
    sounds/*
    images/*
    history.py

[options.entry_points]
console_scripts =
    florodoro=florodoro.__init__:run